<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_edit"
            android:layout_marginTop="25dp"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/pass_edit"
            android:layout_marginTop="25dp"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/password"/>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/login"
            android:layout_gravity="center"/>

    </LinearLayout>

    <Button
        android:id="@+id/server_btn"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/change_server"/>

</RelativeLayout>